# django-mvp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  REFACTORING_STATUS.md  codecov.yml  demo.html  django-formset.skill  django-mvp.code-workspace  pyproject.toml  tasks.py  test-output.txt  test.html  test.py  test_context_processor.py  tmp_badge_output.html
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: copilot-instructions.md
.github/instructions/: general.instructions.md
.github/workflows/: build.yml  changelog.yml  dependencies.yml  docs.yml  on-release-main.yml  tests.yml
.specify/: extensions.yml
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
cotton_layouts/: apps.py  context_processors.py  menus.py  renderers.py  views.py
docs/: IMPROVEMENTS.md  INNER_LAYOUT.md  LAYOUT_CONFIGURATION.md  LAYOUT_SYSTEM.md  OUTER_LAYOUT.md  README.md  STRUCTURE_AND_NAMING.md  adminlte-4-layout-behavior-analysis.md  custom-navbar-widgets.md  index.md  inner-layout.md  layout-configuration.md  layout-data-models-api-contracts.md  navbar-widgets.md  navigation.md
docs/components/: app.md  card.md  info-box.md  menu.md  small-box.md
example/: README.md  __init__.py  apps.py  context_processors.py  menus.py  models.py  tables.py  urls.py  views.py
example/migrations/: 0001_initial.py
example/templates/: base.html
mvp/: __init__.py  apps.py  context_processors.py  menus.py  renderers.py  utils.py  views.py
mvp/templates/: app.html  base.html  test_inner_basic.html  test_inner_collapse_primary.html  test_inner_collapse_secondary.html  test_inner_custom_breakpoint.html  test_inner_custom_gap.html  test_inner_custom_secondary_width.html  test_inner_custom_width.html  test_inner_dual_sidebar.html  test_inner_multiple_params.html  test_inner_primary_only.html  test_inner_primary_sidebar.html  test_inner_secondary_only.html
mvp/templatetags/: __init__.py  mvp.py  mvp_widgets.py
skills/django-mvp/: SKILL.md
specs/001-layout-component-split/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-layout-components/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-outer-layout-config/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-adminlte-widgets/: quickstart.md  research.md  spec.md  tasks.md
specs/002-inner-layout/: ANALYSIS_REMEDIATION.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  OFFCANVAS_IMPLEMENTATION_GUIDE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-layout-configuration/: IMPLEMENTATION-COMPLETE.md  MANUAL_TESTING.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-adminlte-layout-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-default-widgets/: data-model.md  research.md  spec.md  tasks.md
specs/004-site-navigation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-navbar-widgets/: plan-old.md  plan.md  spec.md  tasks-old-scope.md  (+2 more)
tests/: conftest.py  settings.py  test_active_state_rendering.py  test_app.py  test_app_component.py  test_app_components.py  test_app_layout.py  test_avatar.py  test_base_template_integration.py  test_card.py  test_create_view.py  test_custom_renderer.py  test_custom_widget.py  test_datatables_e2e.py  test_datatables_integration.py  test_form_view_integration.py  test_form_view_mixin.py  test_fullscreen_widget.py  test_info_box.py  test_inner_layout.py  test_layout_config.py  test_layout_demo.py  test_layout_demo_views.py  test_list_item_template_mixin.py  test_list_view_mixins.py  test_menu_definition.py  test_menu_integration.py  test_menu_rendering.py  test_messages_widget.py  test_navbar_base_widget.py  test_notifications_widget.py  test_outer_layout_config.py  test_small_box.py  test_smoke.py  test_template_inheritance.py  test_theme_switcher.py  test_theme_switcher_js.py  test_unified_layout_demo.py  test_update_view.py  test_user_widget.py  (+2 more)
(+622 files in other folders)
